fix alignment over 600px

--- a/src/pages/about/about.css
+++ b/src/pages/about/about.css
@@ -29,6 +29,10 @@
         width: 100%;
         height: auto; 
     }
+    .grid-item-left {
+        grid-column: 1;
+        grid-row: 1;
+    }
 }
 
 .grid-container {
